force-app/main/default/objects/Assessment__c/Assessment__c.object-meta.xml
<CustomObject>
    <label>Évaluation</label>
    <nameField>
        <displayFormat>AEV-{000000}</displayFormat>
        <label>Numéro d&apos;évaluation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Évaluations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>