force-app/main/default/objects/Assessment__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>Commentaires d&apos;approbation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>