force-app/main/default/objects/Assessment__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <label>Date d&apos;approbation</label>
    <type>Date</type>
</CustomField>