force-app/main/default/objects/Assessment__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Statut d&apos;approbation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Approuvé</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejeté</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
                <label>En révision</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>