force-app/main/default/objects/Assessment__c/fields/Assessment_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Coefficient__c</fullName>
    <label>Coefficient d&apos;évaluation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>