force-app/main/default/objects/Assessment__c/fields/Assessment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Frequency__c</fullName>
    <label>Fréquence d&apos;évaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
                <label>Annuelle</label>
            </value>
            <value>
                <fullName>Biannual</fullName>
                <label>Biannuelle</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <label>Trimestrielle</label>
            </value>
            <value>
                <fullName>On Demand</fullName>
                <label>Sur demande</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>