force-app/main/default/objects/Assessment__c/fields/Assessment_Method__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Method__c</fullName>
    <label>Méthode d&apos;évaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comparable Sales</fullName>
                <label>Ventes comparables</label>
            </value>
            <value>
                <fullName>Income Approach</fullName>
                <label>Approche par le revenu</label>
            </value>
            <value>
                <fullName>Cost Approach</fullName>
                <label>Approche par le coût</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>