force-app/main/default/objects/Assessment__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <label>Type d&apos;évaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
                <label>Annuelle</label>
            </value>
            <value>
                <fullName>Interim</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
                <label>Spéciale</label>
            </value>
            <value>
                <fullName>Reassessment</fullName>
                <label>Réévaluation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>