force-app/main/default/objects/Assessment__c/fields/Assessment_Year__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Year__c</fullName>
    <label>Année d&apos;évaluation</label>
    <length>4</length>
    <type>Text</type>
</CustomField>