force-app/main/default/objects/Assessment__c/fields/Assessment_Zone__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Zone__c</fullName>
    <label>Zone d&apos;évaluation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>