force-app/main/default/objects/Assessment__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <label>Évaluateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>