force-app/main/default/objects/Assessment__c/fields/Data_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Creation_Date__c</fullName>
    <label>Date de création des données</label>
    <type>Date</type>
</CustomField>