force-app/main/default/objects/Assessment__c/fields/Data_Quality__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality__c</fullName>
    <label>Qualité des données</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
                <label>Bon</label>
            </value>
            <value>
                <fullName>Fair</fullName>
                <label>Moyen</label>
            </value>
            <value>
                <fullName>Poor</fullName>
                <label>Mauvais</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>