force-app/main/default/objects/Assessment__c/fields/Data_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Update_Date__c</fullName>
    <label>Date de mise à jour des données</label>
    <type>Date</type>
</CustomField>