force-app/main/default/objects/Assessment__c/fields/Data_Version__c.field-meta.xml
<CustomField>
    <fullName>Data_Version__c</fullName>
    <label>Version des données</label>
    <length>50</length>
    <type>Text</type>
</CustomField>