force-app/main/default/objects/Assessment__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Date de dernière modification</label>
    <type>Date</type>
</CustomField>