force-app/main/default/objects/Assessment__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Date de dernière synchronisation</label>
    <type>Date</type>
</CustomField>