force-app/main/default/objects/Assessment__c/fields/Market_Factor__c.field-meta.xml
<CustomField>
    <fullName>Market_Factor__c</fullName>
    <label>Facteur de marché</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>