force-app/main/default/objects/Assessment__c/fields/Next_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Assessment_Date__c</fullName>
    <label>Date de prochaine évaluation</label>
    <type>Date</type>
</CustomField>