force-app/main/default/objects/Assessment__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <label>Date de prochaine révision</label>
    <type>Date</type>
</CustomField>