force-app/main/default/objects/Assessment__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <label>Date de notification</label>
    <type>Date</type>
</CustomField>