force-app/main/default/objects/Assessment__c/fields/Notification_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipient__c</fullName>
    <label>Destinataire de la notification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>