force-app/main/default/objects/Assessment__c/fields/Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_Status__c</fullName>
    <label>Statut de notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <label>Non envoyée</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <label>Envoyée</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <label>Échouée</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>En attente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>