force-app/main/default/objects/Assessment__c/fields/Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Type__c</fullName>
    <label>Type de notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
                <label>Lettre</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Téléphone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>