force-app/main/default/objects/Assessment__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propriétaire</label>
    <referenceTo>Owner__c</referenceTo>
    <relationshipLabel>Évaluations (propriétaire)</relationshipLabel>
    <relationshipName>OwnerAssessments</relationshipName>
    <type>Lookup</type>
</CustomField>