force-app/main/default/objects/Assessment__c/fields/Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Priority_Level__c</fullName>
    <label>Niveau de priorité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>Faible</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Moyen</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>Élevé</label>
            </value>
            <value>
                <fullName>Critical</fullName>
                <label>Critique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>