force-app/main/default/objects/Assessment__c/fields/Processing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Processing_Comments__c</fullName>
    <label>Commentaires de traitement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>