force-app/main/default/objects/Assessment__c/fields/Processing_Date__c.field-meta.xml
<CustomField>
    <fullName>Processing_Date__c</fullName>
    <label>Date de traitement</label>
    <type>Date</type>
</CustomField>