force-app/main/default/objects/Assessment__c/fields/Processor__c.field-meta.xml
<CustomField>
    <fullName>Processor__c</fullName>
    <label>Processeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>