force-app/main/default/objects/Assessment__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Propriété</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Évaluations</relationshipLabel>
    <relationshipName>Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>