force-app/main/default/objects/Assessment__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Type de propriété</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
                <label>Résidentiel</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
                <label>Industriel</label>
            </value>
            <value>
                <fullName>Agricultural</fullName>
                <label>Agricole</label>
            </value>
            <value>
                <fullName>Mixed Use</fullName>
                <label>Usage mixte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>