force-app/main/default/objects/Assessment__c/fields/Property_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Value__c</fullName>
    <label>Valeur foncière</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>