force-app/main/default/objects/Assessment__c/fields/Publication_Comments__c.field-meta.xml
<CustomField>
    <fullName>Publication_Comments__c</fullName>
    <label>Commentaires de publication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>