force-app/main/default/objects/Assessment__c/fields/Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date__c</fullName>
    <label>Date de publication</label>
    <type>Date</type>
</CustomField>