force-app/main/default/objects/Assessment__c/fields/Publication_Status__c.field-meta.xml
<CustomField>
    <fullName>Publication_Status__c</fullName>
    <label>Statut de publication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>Published</fullName>
                <label>Publié</label>
            </value>
            <value>
                <fullName>Archived</fullName>
                <label>Archivé</label>
            </value>
            <value>
                <fullName>Retracted</fullName>
                <label>Retiré</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>