force-app/main/default/objects/Assessment__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <label>Éditeur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>