force-app/main/default/objects/Assessment__c/fields/Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Date__c</fullName>
    <label>Date de révision</label>
    <type>Date</type>
</CustomField>