force-app/main/default/objects/Assessment__c/fields/Revision_Status__c.field-meta.xml
<CustomField>
    <fullName>Revision_Status__c</fullName>
    <label>Statut de révision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <label>Non commencée</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Terminée</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <label>En attente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>