force-app/main/default/objects/Assessment__c/fields/Revisor__c.field-meta.xml
<CustomField>
    <fullName>Revisor__c</fullName>
    <label>Réviseur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>