force-app/main/default/objects/Assessment__c/fields/Sync_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Sync_Attempts__c</fullName>
    <label>Nombre de tentatives de synchronisation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>