force-app/main/default/objects/Assessment__c/fields/Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sync_Error_Message__c</fullName>
    <label>Message d&apos;erreur de synchronisation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>