force-app/main/default/objects/Assessment__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Statut de synchronisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <label>En attente</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Terminé</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <label>Échoué</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>