force-app/main/default/objects/Assessment__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <label>Montant des taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>