force-app/main/default/objects/Assessment__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <label>Taux de taxation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>