force-app/main/default/objects/Assessment__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <label>Valeur totale</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>