force-app/main/default/objects/Assessment__c/fields/Validation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Validation_Comments__c</fullName>
    <label>Commentaires de validation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>