force-app/main/default/objects/Assessment__c/fields/Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Validation_Date__c</fullName>
    <label>Date de validation</label>
    <type>Date</type>
</CustomField>