force-app/main/default/objects/Assessment__c/fields/Validator__c.field-meta.xml
<CustomField>
    <fullName>Validator__c</fullName>
    <label>Validateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>