force-app/main/default/objects/Assessment__c/fields/Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Date__c</fullName>
    <label>Date de vérification</label>
    <type>Date</type>
</CustomField>