force-app/main/default/objects/Assessment__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Statut de vérification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
                <label>Non vérifié</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>En cours</label>
            </value>
            <value>
                <fullName>Verified</fullName>
                <label>Vérifié</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <label>Échoué</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>