force-app/main/default/objects/Assessment__c/fields/Verifier__c.field-meta.xml
<CustomField>
    <fullName>Verifier__c</fullName>
    <label>Vérificateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>